# chonk

./: .alloyignore.example  .alloyignore.mock  .codebaseignore.example  .epitaxyignore.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: formatting.yml  packaging.yml  publishing.yml  unittesting.yml
alloy/: collector.py  filter.py  main.py  py.typed
chonk/: filter.py  main.py  utilities.py
codebase/: collector.py  filter.py  main.py  py.typed  utilities.py
dev_requirements/: requirements-coverage.txt  requirements-formatting.txt  requirements-linting.txt  requirements-packaging.in  requirements-packaging.txt  requirements-spellchecking.txt  requirements-testing.txt  requirements-typechecking.txt
epitaxy/: filter.py  main.py  utilities.py
src/: _package_version.py
src/chonk/: main.py
unittests/: .pylintrc  conftest.py  test_alloyignore.py  test_chonkignore.py  test_codebaseignore.py  test_epitaxyignore.py  test_extension_filter.py  test_file_collector.py  test_file_filter.py  test_filter.py  test_utilities.py
unittests/data/: dummy.md  dummy_py.py
unittests/data/dummy/: dummy.yml
