[project]
name = "alloy"
description = ""
license = { text = "GPL-3.0", file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "OLILHR" }]
keywords = [""]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["click"]
dynamic = ["readme", "version"]

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project.scripts]
alloy = "alloy.main:generate_markdown"

[project.urls]
Changelog = "https://github.com/OLILHR/alloy/releases"
Homepage = "https://github.com/OLILHR/alloy"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "alloy/_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["/unittests"]

[tool.hatch.build.targets.wheel]
only-include = ["alloy"]
sources = ["alloy"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pylint",
  "black",
  "isort",
  "mypy",
]

[mypy]
truethy-bool = true

[tool.mypy]
disable_error_code = ["no-untyped-def", "no-untyped-call"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "too-few-public-methods",
    "fixme",
    "missing-docstring"
]