[project]
name = "alloy"
description = "codebase consolidation tool"
license = { text = "GPL-3.0", file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "OLILHR" }]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click",
]
dynamic = ["readme", "version"]

[project.urls]
Changelog = "https://github.com/OLILHR/alloy/releases"
Homepage = "https://github.com/OLILHR/alloy"

[project.scripts]
alloy = "alloy.main:generate_markdown"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "scm" }

[tool.pdm.build]
includes = ["alloy"]
excludes = ["/unittests"]

[tool.pdm.readme]
content-type = "text/markdown"
path = "README.md"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[mypy]
truethy-bool = true

[tool.mypy]
disable_error_code = ["no-untyped-def", "no-untyped-call"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "too-few-public-methods",
    "fixme",
    "missing-docstring"
]